# gonzales

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  REQUIREMENTS.md  STATUS.md  STYLEGUIDE.md  claude.md  config.json.example  llms.txt
.claude/agents/: backend-auditor.md  backend-engineer.md  code-reviewer.md  docs-expert.md  docs-writer.md  frontend-auditor.md  frontend-engineer.md  git-agent.md  i18n-auditor.md  mcp-engineer.md  mcp-expert.md  product-manager.md  test-auditor.md  tui-engineer.md  tui-ux-expert.md  web-ux-expert.md
.github/workflows/: version-check.yml
backend/: pyproject.toml
backend/gonzales/: __init__.py  __main__.py  config.py  main.py  version.py
backend/gonzales/api/: dependencies.py  router.py
backend/gonzales/api/v1/: config.py  export.py  measurements.py  outages.py  qos.py  root_cause.py  servers.py  smart_scheduler.py  speedtest.py  statistics.py  status.py  summary.py  topology.py
backend/gonzales/application/: __init__.py
backend/gonzales/application/dto/: __init__.py
backend/gonzales/application/use_cases/: __init__.py  export_data.py  get_statistics.py  manage_config.py  run_speedtest.py
backend/gonzales/cli/: __init__.py  main.py  output.py  utils.py
backend/gonzales/cli/commands/: config.py  export.py  history.py  root_cause.py  run.py  smart_scheduler.py  stats.py  status.py
backend/gonzales/core/: exceptions.py  logging.py  rate_limit.py  security.py
backend/gonzales/db/: engine.py  models.py  repository.py
backend/gonzales/domain/: __init__.py  entities.py  events.py  exceptions.py  value_objects.py
backend/gonzales/domain/models/: __init__.py  qos_profiles.py
backend/gonzales/domain/ports/: __init__.py  network_analyzer_port.py  repositories.py  services.py
backend/gonzales/infrastructure/adapters/: __init__.py  icmplib_analyzer.py
backend/gonzales/mcp/: __init__.py  server.py
backend/gonzales/middleware/: __init__.py  rate_limit.py
backend/gonzales/schemas/: config.py  measurement.py  qos.py  root_cause.py  server.py  smart_scheduler.py  speedtest_raw.py  statistics.py  status.py  topology.py
backend/gonzales/services/: event_bus.py  export_service.py  measurement_service.py  qos_service.py  retention_service.py  root_cause_service.py  scheduler_service.py  smart_scheduler_service.py  speedtest_runner.py  stability_analyzer.py  statistics_service.py  topology_service.py  webhook_service.py
backend/gonzales/static/: index.html  robots.txt
backend/gonzales/static/assets/: DashboardPage-1EPbc6h0.js  DashboardPage-2H7MPmgN.js  DashboardPage-5OKKgWwN.js  DashboardPage-6mCKwKyM.js  DashboardPage-8Z2fa2GK.js  DashboardPage-99o9iKxj.js  DashboardPage-B2O2WDeG.js  DashboardPage-B37H0l7S.js  DashboardPage-B8YNWcbB.js  DashboardPage-BCUOvTVO.js  DashboardPage-BDElZf8E.js  DashboardPage-BKsSg5C2.js  DashboardPage-BMqtmrhD.js  DashboardPage-BNpNyuMd.js  DashboardPage-BVhyCEjs.js  DashboardPage-BYMdQJQw.js  DashboardPage-B_o_HnYU.js  DashboardPage-BdVMgeQe.js  DashboardPage-BgiMd73k.js  DashboardPage-BmJFw6C_.js  DashboardPage-Bmc-cbeP.js  DashboardPage-BrVM_4sC.js  DashboardPage-BrW4JBFk.js  DashboardPage-C3eqXlGy.js  DashboardPage-C4VXMr39.js  DashboardPage-C5jOzk1F.js  DashboardPage-CBfnmJQa.js  DashboardPage-CEscVZYw.js  DashboardPage-CNZ7KcjG.js  DashboardPage-CQX2WmID.js  DashboardPage-CUap58ay.js  DashboardPage-CZXhXUdI.js  DashboardPage-CdNHbXB8.js  DashboardPage-Cfa-QlOc.js  DashboardPage-CfzCbNSc.js  DashboardPage-CqgV1C0a.js  DashboardPage-CrPXiGvS.js  DashboardPage-Crt_RFq5.js  DashboardPage-Cx-YKV-O.js  DashboardPage-D1UJpdJ5.js  (+1263 more)
backend/gonzales/tui/: app.py
backend/gonzales/tui/screens/: dashboard.py  help.py  history.py  settings.py  statistics.py  test.py
backend/gonzales/tui/styles/: gonzales.tcss
backend/gonzales/tui/widgets/: ascii_banner.py  ascii_chart.py  big_speed.py  data_flow.py  live_gauge.py  log_viewer.py  progress_bar.py  sparkline.py  speed_gauge.py  stats_panel.py
backend/gonzales/utils/: __init__.py  connection_detector.py  math_utils.py
backend/tests/: conftest.py  test_api.py  test_event_bus.py  test_measurement_service.py  test_rate_limit.py  test_repository.py  test_retention_service.py  test_statistics_pure.py  test_topology_validation.py  test_webhook_service.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/common/: AnimatedNumber.tsx  Card.tsx  LoadingSpinner.tsx  PageTransition.tsx  StatusBadge.tsx
frontend/src/components/dashboard/: ConnectionHealth.tsx  LatestResult.tsx  OutageAlert.tsx  PingChart.tsx  QuickQosStatus.tsx  (+3 more)
frontend/src/config/: navigation.ts
frontend/src/context/: SpeedTestContext.tsx  ToastContext.test.tsx  ToastContext.tsx
frontend/src/design-system/: animations.css  liquid-glass.css  tokens.css
frontend/src/hooks/: useAnimatedNumber.ts  useApi.ts  useMediaQuery.ts  useOnboarding.ts  useSSE.ts  useSpeedHistory.ts  useTheme.ts  useVersionCheck.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: DashboardPage.tsx  DocsPage.tsx  ExportPage.tsx  HistoryPage.tsx  QosPage.tsx  RootCausePage.tsx  SettingsPage.tsx  StatisticsPage.tsx  TopologyPage.tsx
frontend/src/test/: setup.ts
frontend/src/utils/: format.test.ts  format.ts
(+74 files in other folders)
