[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gonzales"
version = "2.0.5"
description = "Internet Speed Monitor"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.4",
    "reportlab>=4.2.0",
    "icmplib>=3.0.4",
]

[project.optional-dependencies]
tui = [
    "textual>=0.89.0",
    "rich>=13.9.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
