[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gonzales"
version = "3.10.0"
description = "Open-source internet speed monitor with automated testing, analytics dashboard, and Home Assistant integration"
license = "MIT"
authors = [{ name = "akustikrausch" }]
keywords = [
    "internet speed test",
    "bandwidth monitor",
    "network analytics",
    "home assistant",
    "speed monitor",
    "isp tracker",
    "fastapi",
    "sqlite",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.4",
    "reportlab>=4.2.0",
    "icmplib>=3.0.4",
    "slowapi>=0.1.9",
]

[project.scripts]
gonzales = "gonzales.cli.main:app"
gonzales-server = "gonzales.__main__:main"
gonzales-tui = "gonzales.tui.app:main"
gonzales-mcp = "gonzales.mcp.server:main"

[project.urls]
Homepage = "https://github.com/akustikrausch/gonzales"
Documentation = "https://github.com/akustikrausch/gonzales#readme"
Repository = "https://github.com/akustikrausch/gonzales"
Issues = "https://github.com/akustikrausch/gonzales/issues"
"Home Assistant Add-on" = "https://github.com/akustikrausch/gonzales-ha"

[project.optional-dependencies]
cli = [
    "typer[all]>=0.12.0",
    "rich>=13.9.0",
]
tui = [
    "textual>=0.89.0",
    "rich>=13.9.0",
]
mcp = [
    # MCP uses JSON-RPC over stdio, no external dependencies needed
    # aiohttp is already included in main dependencies
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]
all = [
    "gonzales[cli,tui,mcp]",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
